Fixed background color not aligning

--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,7 @@
 .hero-name {
   font-weight: 600;
   color: #fafafa;
-  background-color: var(--color-trans-yellow);
+  background-color: transparent;
 }
 .hero-desc {
   grid-area: description;
